--- a/index.html
+++ b/index.html
@@ -711,10 +711,9 @@
 
     <!-- HERO — FIX 1: big name + FIX 4: warm bg + colour glow -->
     <section class="hero">
-      <div class="hero-photo">
-        <span class="photo-icon">📷</span>
-        <span>Your photo</span>
-      </div>
+   <div class="hero-photo">
+  <img src="heca.jpg" alt="Heca Sferra" class="profile-photo">
+</div>
       <div class="hero-text">
         <h1><span class="name-display">Heca<br/>Sferra</span></h1>
         <p class="hero-tagline">Writing the pain, the healing<br/>and everything in between.</p>
