--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
     <footer>
       <span>© Heca Sferra 2026</span>
       <span>Writing the pain, the healing and everything in between.</span>
-      <a href="https://instagram.com" target="_blank" rel="noopener">Instagram →</a>
+      <a href="https://instagram.com/hecasferra" target="_blank" rel="noopener">Instagram →</a>
     </footer>
   </div>
 
