--- a/index.html
+++ b/index.html
@@ -725,8 +725,8 @@
 
       <main>
         <div class="section-label">Latest posts</div>
-
-09 February 2026
+        <section class="posts">
+          09 February 2026
 monday
 Told my therapist about you.She said it’s time to close the case.
 
@@ -1182,6 +1182,7 @@ Life has a peculiar way of teaching us lessons we never expected to learn. One d
 A Tale of Forbidden Attraction
 She’s not the kind who would catch my eye at first glance. The last thing I’d expect is to be drawn to her. Yet she made a strong impression. Here I am, someone who relishes expensive perfumes and fine wine, while she’s got a whole crate of beer stacked up inside her. But she knows how to speak. And she speaks so well. I, who enjoy dining in high-end restaurants where conversation is secondary, find myself with her, someone who doesn’t fit the bill. Yet she tries. Every single day, and she knows her efforts aren’t in vain. Especially with me, who’s never been one for trying and ended up losing my head. And you know what? I don’t want to look back and see where it went off course. Dangerous! But she likes to flirt with danger. She must be the type who sends flowers. The same person who’s got no hint of a princess about her. Or was it me who was daydreaming of winged horses, castles, princesses… me… STOP! I stopped. But she made me feel so close. So close to the forbidden, the labelled, the things that might never happen. She makes plans, weaves stories, and I’m fully woven into her narrative. Poor me, who has entwined her in my tale as well. I create, she adores. I lose it, she ignores me. I fall asleep, she leaves. She rushes into other arms, loses herself in other mouths, and I risk saying it’s to make me forget. It’s confusing. But she doesn’t want to forget me. I drift off to sleep thinking that tomorrow morning is already the time to have her. I don’t know why, but she feels it.
 
+ </section>
       </main>
 
       <!-- SIDEBAR — FIX 2: pull quote + FIX 6: Studio 88 as credential -->
