--- a/index.html
+++ b/index.html
@@ -726,36 +726,39 @@
       <main>
         <div class="section-label">Latest posts</div>
         <section class="posts">
-     09 February 2026
+09 February 2026
 monday
-Told my therapist about you.
-She said it’s time to close the case.
+Told my therapist about you. She said it’s time to close the case.
 
 06 February 2026
 She Writes in the Morning
-She writes in the morning.
-He calls himself a poet.
-
 He calls it a literary love.
+
 She never called what it was.
 
 He misses her on rainy days.
+
 She misses his touch.
 
 He is all emotion.
+
 She doesn’t speak of hers.
 
 He can’t live with doubt.
+
 She is made of questions.
 
 He loved her.
-She was afraid of staying.
 
-He ran out of ways to say I love you.
+She was afraid of staying. He ran out of ways to say I love you.
+
 She ran away herself.
 
-She writes in the morning.
-He keeps her on the page.     
+She writes in the morning. He keeps her on the page.
+
+02 February 2026
+5:40am
+I couldn’t sleep, imagining the weight of our embrace after so long without you. 
  </section>
       </main>
 
