--- a/index.html
+++ b/index.html
@@ -1347,8 +1347,11 @@ Are we, not fragments of moments, a beautiful rupture?"</p>
       <div class="book-full-info" style="margin-top:2rem;">
           <h2>Studio 88</h2>
           <div class="book-year">2024</div>
-          <p>Add your book description here. Tell readers what Studio 88 is about — the themes, the feeling, the world it lives in. This is your space to make them want to pick it up.</p>
-          <p>A second paragraph if you need it — a quote, a note on how it came to be, or what you hope it gives its readers.</p>
+          <p>Studio 88 tells the story of two colleagues drawn into a slow-burning connection inside a creative workspace where ambition and proximity blur every boundary. 
+            What begins as subtle tension, a glance, a lingering conversation — grows into something deeper, riskier, and impossible to ignore.<p>
+         <p>At its core, the novel explores power, secrecy, and the emotional cost of wanting someone you can’t fully have.<p>
+          <p>It’s about restraint stretched to its limit — and what happens when desire refuses to stay contained.<p>
+            
           <div style="display:flex;gap:1rem;flex-wrap:wrap;margin-top:1.5rem;">
             <a href="mailto:sferrahellen@gmail.com?subject=Studio 88 — Waitlist" class="btn" style="background:var(--accent2);border-color:var(--accent2);color:#fff;">Join the waitlist</a>
           </div>
