--- a/index.html
+++ b/index.html
@@ -1347,10 +1347,8 @@ Are we, not fragments of moments, a beautiful rupture?"</p>
       <div class="book-full-info" style="margin-top:2rem;">
           <h2>Studio 88</h2>
           <div class="book-year">2024</div>
-          <p>Studio 88 tells the story of two colleagues drawn into a slow-burning connection inside a creative workspace where ambition and proximity blur every boundary. 
-            What begins as subtle tension, a glance, a lingering conversation — grows into something deeper, riskier, and impossible to ignore.<p>
-         <p>At its core, the novel explores power, secrecy, and the emotional cost of wanting someone you can’t fully have.<p>
-          <p>It’s about restraint stretched to its limit — and what happens when desire refuses to stay contained.<p>
+          <p>Studio 88 tells the story of two colleagues drawn into a slow-burning connection inside a creative workspace where ambition and proximity blur every boundary. What begins as subtle tension, a glance, a lingering conversation, grows into something deeper, riskier, and impossible to ignore.<p>
+         <p>At its core, the novel explores power, secrecy, and the emotional cost of wanting someone you can’t fully have. It’s about restraint stretched to its limit, and what happens when desire refuses to stay contained.<p>
             
           <div style="display:flex;gap:1rem;flex-wrap:wrap;margin-top:1.5rem;">
             <a href="mailto:sferrahellen@gmail.com?subject=Studio 88 — Waitlist" class="btn" style="background:var(--accent2);border-color:var(--accent2);color:#fff;">Join the waitlist</a>
