--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@ Are we, not fragments of moments, a beautiful rupture?"</p>
           <div class="book-sidebar-body">
             <div class="book-sidebar-title">Studio 88</div>
             <div class="book-sidebar-year">2024</div>
-            <div class="book-sidebar-desc">Add a short, compelling description of Studio 88 here. The genre, the feeling, who it's for. Make them want it.</div>
+            <div class="book-sidebar-desc">Studio 88 is for anyone who believes the most dangerous relationships don’t explode. They simmer.</div>
             <a href="#books" class="read-more" style="color:var(--muted);">Read more →</a>
           </div>
         </div>
